# object_recognition

./: CMakeLists.txt  pcl_multi_object_recognition.cpp
include/: Cluster.h  Error.h  Icp.h  KeyDes.h  KeyDes.hpp  KeyPoints.h  Keypoints.hpp  OpenniStreamer.h  Ppfe.h  Sampling.h  Semaphore.h  Visualizer.h  define.h  find_function.h  help.h  utils.h
include/grabber/: openni2_grabber.hpp  openni2_grabber_kinect.hpp  registration.cpp  registration.h
include/impl/: KeyDes.hpp  KeyPoints.hpp
src/: Cluster.cpp  Error.cpp  Icp.cpp  KeyDes.cpp  KeyDes.hpp  Keypoints.cpp  OpenniStreamer.cpp  Ppfe.cpp  Sampling.cpp  Visualizer.cpp  define.cpp  find_function.cpp  help.cpp  utils.cpp
